fixed bugs in managing member alignment and functionality of application and projects

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,4 +1,3 @@
-
 @import "../../styles.css";
 
 .card-home {
@@ -109,8 +108,6 @@
   padding-left: 10px;
   padding-top: 18px;
   color: #232324;
-  width: 424px;
-  height: 56px;
 }
 
 /* start: Avatar */
